chore: add accounts handler and update API def (#91)
* chore: add accounts handler and update API def

* chore: improve test coverage
